@@ -42,7 +42,9 @@ DEFINE_GUID(GUID_DEVINTERFACE_SERENUM_BUS_ENUMERATOR,0x4D36E978,0xE325,0x11CE,0x
 #ifndef _DEVIOCTL_
 #define _DEVIOCTL_
 
+#ifndef DEVICE_TYPE
 #define DEVICE_TYPE DWORD
+#endif
 
 #define FILE_DEVICE_BEEP 0x00000001
 #define FILE_DEVICE_CD_ROM 0x00000002
